--- a/project.config.json
+++ b/project.config.json
@@ -2,16 +2,27 @@
 	"description": "项目配置文件",
 	"setting": {
 		"urlCheck": true,
-		"es6": false,
+		"es6": true,
+		"enhance": true,
 		"postcss": false,
 		"minified": true,
 		"newFeature": true,
+		"coverView": true,
 		"nodeModules": false,
 		"autoAudits": false,
-		"uglifyFileName": true
+		"uglifyFileName": true,
+		"checkInvalidKey": true,
+		"checkSiteMap": true,
+		"uploadWithSourceMap": true,
+		"babelSetting": {
+			"ignore": [],
+			"disablePlugins": [],
+			"outputPath": ""
+		},
+		"bundle": true
 	},
 	"compileType": "miniprogram",
-	"libVersion": "2.5.2",
+	"libVersion": "2.9.1",
 	"appid": "wx9ce37d9662499df3",
 	"projectname": "%E5%B0%8F%E7%A8%8B%E5%BA%8F%E6%95%99%E7%A8%8B",
 	"isGameTourist": false,
