--- a/project.config.json
+++ b/project.config.json
@@ -26,5 +26,7 @@
 	"appid": "wx9ce37d9662499df3",
 	"projectname": "%E5%B0%8F%E7%A8%8B%E5%BA%8F%E6%95%99%E7%A8%8B",
 	"isGameTourist": false,
+	"simulatorType": "wechat",
+	"simulatorPluginLibVersion": {},
 	"condition": {}
 }
